--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,14 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='interviews.css') }}">
   </head>
   <body>
-
+    <div class="notes">
+      Note:
+      <ul>
+        <li>These all are counting *scorecards*, not candidates</li>
+        <li><a href="{{ url_for('interviews_db') }}">Download Dataset</a></li>
+        <li><a href="https://github.com/NoRedInk/greenhouse-interview-analytics">GitHub</a></li>
+      </ul>
+    </div>
     <div class="main">
       <div class="left">
         <div class="row">
@@ -20,6 +27,10 @@
           <div id="scorecard-outcome-chart"></div>
           <div id="overall-outcome-chart"></div>
         </div>
+
+        <div class="row">
+          <div id="datatable"></div>
+        </div>
       </div>
 
       <div class="right">
@@ -27,6 +38,7 @@
       </div>
     </div>
 
+    <script src="//cdn.rawgit.com/google/palette.js/3ec568c9dd6d44996c8b045ed9dde28fc1744105/palette.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
     <script src="//cdn.rawgit.com/crossfilter/crossfilter/1.3.13/crossfilter.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/dc/2.1.0-dev/dc.min.js"></script>
