--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
       </div>
     </div>
 
+    <script src="//cdn.jsdelivr.net/lodash/4.13.1/lodash.min.js"></script>
     <script src="//cdn.rawgit.com/google/palette.js/3ec568c9dd6d44996c8b045ed9dde28fc1744105/palette.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
     <script src="//cdn.rawgit.com/crossfilter/crossfilter/1.3.13/crossfilter.min.js"></script>
